--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="#about">about</a></li>
-					<li><a href="#highlights">Experiences</a></li>
-					<li><a href="#footer">contact me</a></li>
+					<li><a href="#experience">Experiences</a></li>
+					<li><a href="#contact-me">contact me</a></li>
 				</ul>
 			</nav>
 
@@ -35,27 +35,13 @@
 
 		<!-- Main -->
 		<div id="main" class="wrapper style2">
-			<div class="title">Social Links</div>
+			<div class="title" id="about">About</div>
 			<div class="container">
 
 				<!-- Content -->
 				<div id="content">
 					<article class="box post">
-						<header class="style1">
-							<a href="https://github.com/anehere" target="_blank">
-								<img class="link-logo" src="./images/github-logo-64px.png">
-							</a>
-							<a href="https://www.linkedin.com/in/akash-nehere" target="_blank">
-								<img class="link-logo" src="./images/linkedin-logo.svg" />
-							</a>
-							<a href="https://www.instagram.com/akash.nehere/" target="_blank">
-								<img class="link-logo" src="./images/instagram-logo.svg" />
-							</a>
-						</header>
 
-						<header id="about" class="style1">
-							<h2>About Me</h2>
-						</header>
 						<div class="image featured">
 							<img src="images/pic01.jpg" alt="" />
 						</div>
@@ -72,7 +58,23 @@
 							<br> Apart from this I am also Automobile Enthusiast and likes to keep all updates from
 							Automobile world.
 						</p>
+<!-- 
+						
+						<header id="social-links" class="style1">
+							<h2>SOCIAL LINKS</h2>
+						</header> -->
 
+						<header class="style1" style="margin-top: 5%;">
+							<a href="https://github.com/anehere" target="_blank">
+								<img class="link-logo" src="./images/github-logo-64px.png">
+							</a>
+							<a href="https://www.linkedin.com/in/akash-nehere" target="_blank">
+								<img class="link-logo" src="./images/linkedin-logo.svg" />
+							</a>
+							<a href="https://www.instagram.com/akash.nehere/" target="_blank">
+								<img class="link-logo" src="./images/instagram-logo.svg" />
+							</a>
+						</header>
 					</article>
 				</div>
 			</div>
@@ -80,7 +82,7 @@
 
 		<!-- Highlights -->
 		<section id="highlights" class="wrapper style3">
-			<div class="title">Experiences</div>
+			<div class="title" id="experience">Experiences</div>
 			<div class="container">
 				<div class="row aln-center">
 					<div class="col-4 col-12-medium">
@@ -98,8 +100,8 @@
 		</section>
 
 		<!-- Footer -->
-		<section id="footer" class="wrapper">
-			<div class="title">Contact Me</div>
+		<section id="footer" class="wrapper" >
+			<div class="title" id="contact-me">Contact Me</div>
 			<div class="container">
 
 
@@ -125,9 +127,8 @@
 						</div>
 					</div>
 				</section>
-				<ul>
-					<li>&copy; Akash Nehere.</li>
-					</li>
+				<ul style="list-style: none;">
+					<li style="position: absolute; float: right;bottom: 0; right: 0; margin-right: 2%;">&copy; 2021 Akash Nehere</li>
 				</ul>
 			</div>
 		</section>
