--- a/index.html
+++ b/index.html
@@ -58,11 +58,6 @@
 							<br> Apart from this I am also Automobile Enthusiast and likes to keep all updates from
 							Automobile world.
 						</p>
-<!-- 
-						
-						<header id="social-links" class="style1">
-							<h2>SOCIAL LINKS</h2>
-						</header> -->
 
 						<header class="style1" style="margin-top: 5%;">
 							<a href="https://github.com/anehere" target="_blank">
@@ -75,10 +70,67 @@
 								<img class="link-logo" src="./images/instagram-logo.svg" />
 							</a>
 						</header>
+
 					</article>
 				</div>
 			</div>
 		</div>
+
+		<!-- services I offer -->
+		<!-- <header>
+			<div class="owl-carousel owl-theme">
+				<div class="item">
+					<img src="https://cdn.pixabay.com/photo/2015/05/31/10/51/technology-791029_960_720.jpg" alt="">
+					<div class="cover">
+						<div class="container">
+							<div class="header-content">
+								<div class="line"></div>
+								<h1>Complete Web Development Solution</h1>
+								<h4>I Offer services to design the web page from scratch, hosting the your custom domain and maintain web-site</h4>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</header> -->
+
+
+		<!-- Technologies I have worked on -->
+		<section class="wrapper style3" style="background-color: darkgray;">
+			<div class="title" id="technical" style="background-color: darkgray;">Technologies</div>
+			<div class="container">
+				<div class="container">
+					<div class="col">
+						<div class="col-md-12">
+							<h3 class="progress-title">JAVA</h3>
+							<div class="progress">
+								<div class="progress-bar" style="width:80%;">
+									<div class="progress-value">80%</div>
+								</div>
+							</div>
+							<h3 class="progress-title">Spring Boot</h3>
+							<div class="progress">
+								<div class="progress-bar" style="width:65%;">
+									<div class="progress-value">65%</div>
+								</div>
+							</div>
+							<h3 class="progress-title">Angular</h3>
+							<div class="progress">
+								<div class="progress-bar" style="width:75%;">
+									<div class="progress-value">75%</div>
+								</div>
+							</div>
+							<h3 class="progress-title">HTML / CSS</h3>
+							<div class="progress">
+								<div class="progress-bar" style="width:60%;">
+									<div class="progress-value">60%</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		<!-- Highlights -->
 		<section id="highlights" class="wrapper style3">
@@ -100,7 +152,7 @@
 		</section>
 
 		<!-- Footer -->
-		<section id="footer" class="wrapper" >
+		<section id="footer" class="wrapper">
 			<div class="title" id="contact-me">Contact Me</div>
 			<div class="container">
 
@@ -129,7 +181,8 @@
 					</div>
 				</section>
 				<ul style="list-style: none;">
-					<li style="position: absolute; float: right;bottom: 0; right: 0; margin-right: 2%;">&copy; 2021 Akash Nehere</li>
+					<li style="position: absolute; float: right;bottom: 0; right: 0; margin-right: 2%;">&copy; 2021
+						Akash Nehere</li>
 				</ul>
 			</div>
 		</section>
