added new social link icons

--- a/index.html
+++ b/index.html
@@ -64,10 +64,13 @@
 								<img class="link-logo" src="./images/github-logo-64px.png">
 							</a>
 							<a href="https://www.linkedin.com/in/akash-nehere" target="_blank">
-								<img class="link-logo" src="./images/linkedin-logo.svg" />
+								<img class="link-logo" src="./images/linked-in.svg" />
 							</a>
 							<a href="https://www.instagram.com/akash.nehere/" target="_blank">
-								<img class="link-logo" src="./images/instagram-logo.svg" />
+								<img class="link-logo" src="./images/instagram.svg" />
+							</a>
+							<a href="https://www.facebook.com/akash.nehere.94" target="_blank">
+								<img class="link-logo" src="./images/facebook.svg" />
 							</a>
 						</header>
 
