added twitter icon without link

--- a/index.html
+++ b/index.html
@@ -50,12 +50,9 @@
 							<br>Worked on Project features with Java. Learned many technologies such as Java’s Spring
 							Boot, Angular 8. Created application in Spring Boot Framework to develop REST API’s to
 							support desktop application.
-						</p>
-						<p>As a person I am an Enthusiast who is interested to study and gain the knowledge on any
+							<br>As a person I am an Enthusiast who is interested to study and gain the knowledge on any
 							topic. I am also a traveller who likes to ride motorcycle, loves to hike forts and natural
-							terrains.
-
-							<br> Apart from this I am also Automobile Enthusiast and likes to keep all updates from
+							terrains. Apart from this I am also Automobile Enthusiast and likes to keep all updates from
 							Automobile world.
 						</p>
 
@@ -71,6 +68,9 @@
 							</a>
 							<a href="https://www.facebook.com/akash.nehere.94" target="_blank">
 								<img class="link-logo" src="./images/facebook.svg" />
+							</a>
+							<a target="_blank">
+								<img class="link-logo" src="./images/twitter.svg" />
 							</a>
 						</header>
 
