--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<a href="https://www.facebook.com/akash.nehere.94" target="_blank">
 								<img class="link-logo" src="./images/facebook.svg" />
 							</a>
-							<a target="_blank">
+							<a href="https://twitter.com/akash_nehere" target="_blank">
 								<img class="link-logo" src="./images/twitter.svg" />
 							</a>
 						</header>
