updated the information in about me section.

--- a/index.html
+++ b/index.html
@@ -45,15 +45,12 @@
 						<div class="image featured">
 							<img src="images/pic01.jpg" alt="" />
 						</div>
-						<p>I am a Java Developer with knowledge of Front-End technologies having industry experience of
-							web applications as well as desktop applications.
-							<br>Worked on Project features with Java. Learned many technologies such as Java’s Spring
-							Boot, Angular 8. Created application in Spring Boot Framework to develop REST API’s to
-							support desktop application.
-							<br>As a person I am an Enthusiast who is interested to study and gain the knowledge on any
-							topic. I am also a traveller who likes to ride motorcycle, loves to hike forts and natural
-							terrains. Apart from this I am also Automobile Enthusiast and likes to keep all updates from
-							Automobile world.
+						<p>Akash is a Java Developer with knowledge of Front-end and desktop applications with hands-on
+							Experience in Spring Boot and Angular framework.
+							</br>
+							Akash is willing to learn anything, also a traveler who likes to ride a motorcycle, loves to
+							hike. Apart from this he is an Automobile Enthusiast and likes to keep all updates from Automobile
+							world.
 						</p>
 
 						<header class="style1" style="margin-top: 5%;">
