--- a/index.html
+++ b/index.html
@@ -181,8 +181,7 @@
 					</div>
 				</section>
 				<ul style="list-style: none;">
-					<li style="position: absolute; float: right;bottom: 0; right: 0; margin-right: 2%;">&copy; 2021
-						Akash Nehere</li>
+					<li style="position: absolute; float: right;bottom: 0; right: 0; margin-right: 2%;">&copy;Akash Nehere 2021</li>
 				</ul>
 			</div>
 		</section>
