--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 					<div class="row">
 
 						<div class="col-6 col-12-small">
-							<section style="margin-left: 40%;">
+							<section>
 								<h3 class="icon solid fa-envelope">Email</h3>
 								<p>
 									<a href="mailto:akashnehere@gmail.com">akashnehere@gmail.com</a>
@@ -170,7 +170,7 @@
 							</section>
 						</div>
 						<div class="col-6 col-12-small">
-							<section style="margin-left: 20%;">
+							<section>
 								<h3 class="icon solid fa-phone">Phone</h3>
 								<p>
 									+91 9096999403
@@ -181,7 +181,7 @@
 					</div>
 				</section>
 				<ul style="list-style: none;">
-					<li style="position: absolute; float: right;bottom: 0; right: 0; margin-right: 45%; margin-bottom: 7%;">&copy;Akash Nehere 2021</li>
+					<li style="position: absolute; float: right;bottom: 0; right: 0; margin-right: 2%;">&copy;Akash Nehere 2021</li>
 				</ul>
 			</div>
 		</section>
