Added main area

--- a/index.html
+++ b/index.html
@@ -1,36 +1,58 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Akash Nehere</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Akash Nehere</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-</head>
-
-<body>
-	<!-- navigation bar code -->
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<div class="container-fluid">
-				<button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarCollapse">
-					<div class="navbar-nav">
-						<a href="#" class="nav-item nav-link active">Home</a>
-						<a href="#" class="nav-item nav-link">Profile</a>
-						<a href="#" class="nav-item nav-link">Experience</a>
-						<a href="#" class="nav-item nav-link disabled" tabindex="-1">Contact Me</a>
-					</div>
-					<!-- <div class="navbar-nav ms-auto">
+  <body>
+    <!-- navigation bar code -->
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <button
+            type="button"
+            class="navbar-toggler"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarCollapse"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav">
+              <a href="#" class="nav-item nav-link active">Home</a>
+              <a href="#" class="nav-item nav-link">Profile</a>
+              <a href="#" class="nav-item nav-link">Experience</a>
+              <a href="#" class="nav-item nav-link disabled" tabindex="-1"
+                >Contact Me</a
+              >
+            </div>
+            <!-- <div class="navbar-nav ms-auto">
 						<a href="#" class="nav-item nav-link">Login</a>
 					</div> -->
-				</div>
-			</div>
-		</nav>
+          </div>
+        </div>
+      </nav>
+    </header>
 
-</body>
+    <!-- Main Area -->
+    <main>
+      <div class="main-area">
+        <div style="">
+          <!-- <label style="color: white; font-size: 500%; margin: 15%; margin-left: 33%;">Akash Nehere</label> -->
+        </div>
+      </div>
+    </main>
 
+    <!-- Footer -->
+    <footer></footer>
+    <!-- Bootstrap Script -->
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  </body>
 </html>
