--- a/index.html
+++ b/index.html
@@ -6,26 +6,83 @@
 	<title>Akash Nehere</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<script type="text/javascript" src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/main.js"></script>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/base.css" />
+	<link rel="stylesheet" href="assets/css/index.css" />
 </head>
 
 <body>
 
-	<!-- Overlay -->
-	<div class="overlay">
-		<div class="typing">
-			<h1>Akash Nehere</h1>
+	<!-- NavBar -->
+	<nav>
+		<div class="logo">
+			<a href="./index.html">Dev.Akash</a> 
 		</div>
+		<ul class="nav-links">
+			<li><a href="./index.html">Home</a></li>
+			<li><a href="./about-me.html">About Me</a></li>
+			<li><a href="./skills.html">Skills</a></li>
+			<li><a href="./experience.html">Experience</a></li>
+			<li><a href="./contact-me.html">Contact Me</a></li>
+		</ul>
 
+		<div class="burger">
+			<div class="line1"></div>
+			<div class="line2"></div>
+			<div class="line3"></div>
+		</div>
+	</nav>
+
+	<!-- Overlay -->
+	<div class="mainContent">
+		<!-- Typing Div -->
+		<div class="overlay">
+			<div class="typing">
+				<h1>&ltAKASH NEHERE<span>&#8725;</span>&gt</h1>
+			</div>
+		</div>
+		<div class="card">
+			<div class="cardText">Akash is a Software Developer based out of India.<br>
+			An Automative Enthusiast, who loves to ride Bikes.
+		</div>
+		</div>
 	</div>
 
+	<!-- Footer for web view -->
+	<footer>
+		<div class="bottom">
+			<a href="https://www.instagram.com/akash.nehere/" target="_blank">
+				<img src="./images/instagram.svg" class="social_media_logo">
+			</a>
+			<a href="https://github.com/anehere" target="_blank">
+				<img src="./images/github-logo-64px.png" class="social_media_logo">
+			</a>
+			<a href="https://www.linkedin.com/in/akash-nehere" target="_blank">
+				<img src="./images/linked-in.svg" class="social_media_logo">
+			</a>
+			<a href="https://www.facebook.com/akash.nehere.94" target="_blank">
+				<img src="./images/facebook.svg" class="social_media_logo">
+			</a>
+		</div>
+	</footer>
 
-
-	<div class="card">
-		Magic Card
+	<!-- footer for mobile view -->
+	<div class="mobile_bottom">
+		<a href="https://www.instagram.com/akash.nehere/" target="_blank">
+			<img src="./images/instagram.svg" class="social_media_logo">
+		</a>
+		<a href="https://github.com/anehere" target="_blank">
+			<img src="./images/github-logo-64px.png" class="social_media_logo">
+		</a>
+		<a href="https://www.linkedin.com/in/akash-nehere" target="_blank">
+			<img src="./images/linked-in.svg" class="social_media_logo">
+		</a>
+		<a href="https://www.facebook.com/akash.nehere.94" target="_blank">
+			<img src="./images/facebook.svg" class="social_media_logo">
+		</a>
 	</div>
+
+	<script src="assets/js/index.js"> </script>
 
 </body>
 
