--- a/index.html
+++ b/index.html
@@ -1274,44 +1274,44 @@
 
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
 
-              <!-- Electron POC -->
+              <!-- Kiosk Project -->
               <div
-                class="bg-[#112240] p-6 rounded-lg shadow-lg border border-[#64FFDA] border-opacity-10 transform transition-all duration-300 hover:shadow-xl hover:-translate-y-2 animate__animated animate__fadeInUp md:col-span-2 md:w-2/3 mx-auto">
+                class="bg-[#112240] p-6 rounded-lg shadow-lg border border-[#64FFDA] border-opacity-10 transform transition-all duration-300 hover:shadow-xl hover:-translate-y-2 animate__animated animate__fadeInRight">
                 <div class="flex items-start mb-4">
-                  <!-- <div class="bg-[#0A192F] p-2 rounded-lg mr-4">
+                  <div class="bg-[#0A192F] p-2 rounded-lg mr-4">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-[#64FFDA]" fill="none"
                       viewBox="0 0 24 24" stroke="currentColor">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
+                        d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z" />
                     </svg>
-                  </div> -->
+                  </div>
                   <div>
-                    <h4 class="text-xl font-bold text-white">Electron Framework POC</h4>
-                    <p class="text-[#64FFDA] text-sm font-mono">Achievement</p>
+                    <h4 class="text-xl font-bold text-white">Kiosk</h4>
+                    <p class="text-[#64FFDA] text-sm font-mono">Blancco Diagnostics</p>
                   </div>
                 </div>
 
                 <div class="mb-6">
-                  <p class="text-gray-300">A proof of concept application using the Electron framework, featuring
-                    console command execution and output parsing with an Angular-based UI.</p>
+                  <p class="text-gray-300">A multi-threaded solution that guides customers in understanding their device
+                    and resolving minor issues to optimize device performance.</p>
                 </div>
 
-                <div class="bg-[#0A192F] p-4 rounded mb-6">
-                  <h5 class="text-[#64FFDA] font-semibold mb-2">Technical Challenges Solved</h5>
-                  <ul class="text-gray-400 text-sm space-y-1 list-disc list-inside">
-                    <li>Integration of Angular frontend with Electron's Node.js backend</li>
-                    <li>Secure execution of system commands from the application</li>
-                    <li>Parsing and formatting command output for user-friendly display</li>
-                    <li>Cross-platform compatibility considerations</li>
+                <div class="mb-6">
+                  <h5 class="text-white font-semibold mb-3">Key Features</h5>
+                  <ul class="text-gray-300 space-y-2 list-disc list-inside">
+                    <li>Multi-threaded architecture for handling concurrent diagnostics</li>
+                    <li>Self-service device optimization tools</li>
+                    <li>Interactive troubleshooting guidance</li>
+                    <li>Performance enhancement recommendations</li>
+                    <li>User-friendly interface for non-technical customers</li>
                   </ul>
                 </div>
 
                 <div class="flex flex-wrap gap-2">
-                  <span class="px-3 py-1 bg-[#0A192F] text-[#64FFDA] text-sm rounded-full">Electron</span>
-                  <span class="px-3 py-1 bg-[#0A192F] text-[#64FFDA] text-sm rounded-full">Angular</span>
-                  <span class="px-3 py-1 bg-[#0A192F] text-[#64FFDA] text-sm rounded-full">Node.js</span>
-                  <span class="px-3 py-1 bg-[#0A192F] text-[#64FFDA] text-sm rounded-full">Command-line Parsing</span>
-                  <span class="px-3 py-1 bg-[#0A192F] text-[#64FFDA] text-sm rounded-full">Desktop Application</span>
+                  <span class="px-3 py-1 bg-[#0A192F] text-[#64FFDA] text-sm rounded-full">Java</span>
+                  <span class="px-3 py-1 bg-[#0A192F] text-[#64FFDA] text-sm rounded-full">Multi-threading</span>
+                  <span class="px-3 py-1 bg-[#0A192F] text-[#64FFDA] text-sm rounded-full">UI/UX Design</span>
+                  <span class="px-3 py-1 bg-[#0A192F] text-[#64FFDA] text-sm rounded-full">Device Optimization</span>
                 </div>
               </div>
             </div>
